# SMElib

./: .gitignore  .travis.yml  LICENSE  Makefile  Makefile.am  Makefile_f2c.am  Makefile_mac.am  Makefile_parallel.am  README.md  bootstrap  configure.ac  name.sed
.github/workflows/: clean_artifacts.yml  cmake.yml  linux_f2c.yml  make.yml
cython/: MANIFEST.in  README.md  setup-f2c.py  setup.py  smelib.pyx
cython/include/: sme_synth_faster.h
libf2c/: makefile.u
pymodule/: _smelib.cpp  libtools.py  setup.py  sme_synth_faster.h  smelib.py  test_pymodule.py
src/data/: Fe1_Bautista2017.dat.INTEL
src/eos/: DEFAULT.EOS  DEFAULT.EOS.current  Makefile  SIZES.EOS  eos.f  eos_eqns.f  eos_eqns_ln.f  eos_ln.f  eos_math.f  eos_math_special.f  kp_q_spln.f
src/sme/: DATA.FILES  Makefile  Makefile_intel  Makefile_win  hlinop.f  hlinprof.f  sme_cython_interface.cpp  sme_cython_interface.h  sme_idl_interface.cpp  sme_idl_interface.h  sme_paralel_interface.h  sme_parallel_interface.cpp  sme_parallel_interface.h  sme_python_bridge.cpp  sme_python_bridge.h  sme_synth_faster.cpp  sme_synth_faster.h  sme_synth_parallel.c  sme_synth_parallel.cpp  sme_synth_parallel.h
src/sme/.deps/: libsme_la-sme_synth_faster.Plo  libsme_la-sme_synth_form_depth.Plo  sme_synth_faster.Plo
test/: README.md  cwrapper.py  cython_call.py  cywrapper.pyx  debug_test_cython.py  setup.py  sme_synth.py  test_call.py  test_cython.py
travis/: build.sh
